--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.7.2
 Django==4.2.2
 django-etc==1.4.0
 django-hitcount==1.3.5
+django-mathfilters==1.0.0
 Pillow==10.0.0
 sqlparse==0.4.4
 tzdata==2023.3
