--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.7.2
 bleach==6.0.0
 Django==4.2.2
+django-appconf==1.0.5
+django-compressor==4.4
 django-debug-toolbar==4.1.0
 django-etc==1.4.0
 django-hitcount==1.3.5
@@ -12,6 +14,8 @@ django-simple-captcha==0.5.18
 django-summernote==0.8.20.0
 django-taggit==4.0.0
 Pillow==10.0.0
+rcssmin==1.1.1
+rjsmin==1.2.1
 six==1.16.0
 sqlparse==0.4.4
 tzdata==2023.3
